--- a/bog_app_2/app/views/creatures/show.html.erb
+++ b/bog_app_2/app/views/creatures/show.html.erb
@@ -3,3 +3,4 @@
     <strong>Name:</strong> <%= @creature.name %>
     <strong>Description:</strong> <%= @creature.description %>
   </p>
+<%= button_to "Delete", @creature, method: :delete %>
