--- a/bog_app/app/views/creatures/new.html.erb
+++ b/bog_app/app/views/creatures/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @creatures do |c| %>
 <p>
-  <%= c.name %>
-  <%= c.description %>
+  <%= c.text_field :name %>
+  <%= c.text_area :description %>
   <%= c.submit "Save" %>
 </p>
 <% end %>
